<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:id="@+id/shadow_view"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shadow"
        app:layout_constraintTop_toBottomOf="@id/recycler_view"
        app:layout_constraintBottom_toTopOf="@id/compose_screen_btn"/>

    <Button
        android:id="@+id/compose_screen_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:text="Open Compose Screen"
        android:background="@drawable/round_corners"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        android:layout_gravity="center_horizontal" />
</LinearLayout>