<!-- carousel_item.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/carousel_image"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/image1" />

    <TextView
        android:id="@+id/carousel_text"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="Sample Text"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"/>


</LinearLayout>
