<resources>
    <string name="app_name">Test Application</string>
    <string name="SUBTITLE_LIST_NAME">QA member %s</string>
    <string name="espresso_text">Use Espresso to write concise, beautiful, and reliable Android UI tests.\n\nThe core API is small, predictable, and easy to learn and yet remains open for customization. Espresso tests state expectations, interactions, and assertions clearly without the distraction of boilerplate content, custom infrastructure, or messy implementation details getting in the way.\n\nEspresso tests run optimally fast! It lets you leave your waits, syncs, sleeps, and polls behind while it manipulates and asserts on the application UI when it is at rest.</string>
    <string name="espresso_subtext"><![CDATA[The main components of Espresso include the following:\n\nEspresso – Entry point to interactions with views (via onView() and onData()). Also exposes APIs that are not necessarily tied to any view, such as pressBack().\n\nViewMatchers – A collection of objects that implement the Matcher<? super View> interface. You can pass one or more of these to the onView() method to locate a view within the current view hierarchy.\n\nViewActions – A collection of ViewAction objects that can be passed to the ViewInteraction.perform() method, such as click().\n\nViewAssertions – A collection of ViewAssertion objects that can be passed the ViewInteraction.check() method. Most of the time, you will use the matches assertion, which uses a View matcher to assert the state of the currently selected view.]]></string>
    <string name="why_testing_matters_title">Why Testing Matters?</string>
    <string name="why_testing_matters_body">Testing ensures apps work as expected, across different platforms and devices.</string>
    <string name="manual_vs_automated_testing_title">Manual vs. Automated Testing</string>
    <string name="manual_vs_automated_testing_body">Manual testing helps find usability issues, but it\'s slower.</string>
    <string name="manual_vs_automated_testing_body2">Automated testing is faster, repeatable, and essential for CI/CD.</string>
    <string name="espresso_for_android_title">Espresso for Android</string>
    <string name="start_learning_espresso_btn_text">Start Learning Espresso</string>
    <string name="empty_username">You need to enter username</string>
    <string name="empty_password">You need to enter password</string>
    <string name="wrong_password_or_username">Wrong password or username</string>
    <string name="welcome_qa_family">Welcome QA Family!</string>
    <string name="login_button_text">Login</string>
    <string name="password_hint_text">Password:</string>
    <string name="username_hint_text">Username:</string>
</resources>