<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Welcome Text -->
    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_qa_family"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_marginBottom="16dp"/>

    <!-- Image -->
    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/qa_bugs"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/go_to_recycler_view_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Open List of QA members"
        android:background="@drawable/round_corners"
        android:layout_gravity="center"
        android:layout_below="@id/image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"/>
</LinearLayout>
